fix image size and alignment

--- a/assets/css/custom_image.css
+++ b/assets/css/custom_image.css
@@ -5,12 +5,12 @@
 }
 
 .resizable-image {
-    max-width: 10%;
+    max-width: 20%;
     height: auto;
     margin-right: 20px;
     border-radius: 10%;
 }
 
 .image-description {
-    text-align: center;
+    text-align: left;
 }
